--- a/projectprogress.html
+++ b/projectprogress.html
@@ -126,6 +126,13 @@
   </nav>
 
   <main>
+    <section style="text-align: center; margin-bottom: 2rem;">
+      <h2 class="section-heading">Project Overview</h2>
+      <p>We are currently in <strong>Work Package 5 (WP5)</strong>, focused on running real-world experiments with our commensal robot platform. The workshop described below represents a major milestone in this phase.</p>
+    </section>
+
+    
+
     <h2 class="section-heading">Internal Workshop – PRIN 2022 COCOA</h2>
 
     <p style="text-align: center; font-style: italic;">9–12 December 2024, Genoa, Italy</p>
@@ -134,8 +141,8 @@
 
     <div class="video-sample">
       <h3>Workshop Preview Video</h3>
-      <p>This sample shows part of the experimental data collection conducted during the workshop.</p>
-      <iframe src="https://www.youtube.com/embed/ShNoyI5yDsI" allowfullscreen></iframe>
+      <p>This sample shows part of the experimental data collection conducted during the workshop. You can watch the full clip <a href="https://www.youtube.com/watch?v=ShNoyI5yDsI" target="_blank">on YouTube</a>.</p>
+      <img src="images/timeline.png" alt="Video placeholder image" style="max-width: 700px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
     </div>
 
     <div class="timeline">
@@ -150,7 +157,7 @@
 
     <div class="group-photo">
       <h3>Group Photo</h3>
-      <img src="images/groupdece.JPG" alt="COCOA team group photo">
+      <img src="images/groupdece.JPG" alt="COCOA team group photo" style="max-width: 300px;">
     </div>
 
   </main>
@@ -162,4 +169,3 @@
 </body>
 
 </html>
-
