--- a/projectprogress.html
+++ b/projectprogress.html
@@ -140,9 +140,8 @@
     <p>The internal COCOA project workshop focused on preparing and executing the first robot–human commensality experiment. Core team members from Sapienza University and the University of Genoa gathered to define the experiment, integrate and test the platform, and begin data collection. The event included cross-project collaboration with PRIN 2022 VITA and featured participant-driven sessions involving real-time interaction with a social robot over shared meals.</p>
 
     <div class="video-sample">
-      <h3>Workshop Preview Video</h3>
-      <p>This sample shows part of the experimental data collection conducted during the workshop. You can watch the full clip <a href="https://www.youtube.com/watch?v=ShNoyI5yDsI" target="_blank">on YouTube</a>.</p>
-      <img src="images/timeline.png" alt="Video placeholder image" style="max-width: 700px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+      <h3><a href="https://www.youtube.com/watch?v=ShNoyI5yDsI" target="_blank">Workshop Preview Video</a></h3>
+      <img src="images/system.png" alt="System diagram" style="max-width: 700px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
     </div>
 
     <div class="timeline">
