--- a/projectprogress.html
+++ b/projectprogress.html
@@ -149,10 +149,14 @@
 
     <p>The internal COCOA project workshop focused on preparing and executing the first robot–human commensality experiment. Core team members from Sapienza University and the University of Genoa gathered to define the experiment, integrate and test the platform, and begin data collection. The event included cross-project collaboration with PRIN 2022 VITA and featured participant-driven sessions involving real-time interaction with a social robot over shared meals.</p>
 
-    <div class="video-sample">
-      <h3><a href="https://www.youtube.com/watch?v=ShNoyI5yDsI" target="_blank">Workshop Preview Video</a></h3>
-      <img src="images/system.png" alt="System diagram" style="max-width: 700px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+    <div class="video-sample" style="text-align: center; margin: 3rem auto; max-width: 720px;">
+  <a href="https://www.youtube.com/watch?v=ShNoyI5yDsI" target="_blank" style="text-decoration: none; color: #2a72c4;">
+    <div style="border-radius: 12px; overflow: hidden; box-shadow: 0 6px 20px rgba(0,0,0,0.15);">
+      <img src="images/system.png" alt="System diagram" style="width: 100%; display: block;">
     </div>
+    <h3 style="margin-top: 0.8rem;">Workshop Preview Video</h3>
+  </a>
+</div>
 
     
 
