--- a/outreach.html
+++ b/outreach.html
@@ -127,8 +127,7 @@
     <h2 class="section-heading">Outreach & Community</h2>
 
     <div class="event-highlight">
-      <h3>CoFI2024 Workshop</h3>
-      <p><a href="https://cofi2024.github.io" target="_blank">cofi2024.github.io</a></p>
+      <h3><a href="https://cofi2024.github.io" target="_blank" style="color: #2a72c4; text-decoration: none;">CoFI2024 Workshop</a></h3>
       <p>Held in conjunction with the <strong>ICMI 2024 ACM Conference</strong>, this workshop explores how interactive technology can enrich dining experiences and foster an interdisciplinary community around commensality and human-food interaction. A special focus is on multimodal interaction among commensal partners — human or artificial.</p>
       <img src="images/ICMIGroup.jpeg" alt="ICMI Group Photo">
     </div>
