--- a/outreach.html
+++ b/outreach.html
@@ -128,7 +128,7 @@
 
     <div class="event-highlight">
       <h3><a href="https://cofi2024.github.io" target="_blank" style="color: #2a72c4; text-decoration: none;">CoFI2024 Workshop</a></h3>
-      <p>Held in conjunction with the <strong>ICMI 2024 ACM Conference</strong>, this workshop explores how interactive technology can enrich dining experiences and foster an interdisciplinary community around commensality and human-food interaction. A special focus is on multimodal interaction among commensal partners — human or artificial.</p>
+      <p>Held in conjunction with the <strong><a href="https://icmi.acm.org/2024/" target="_blank" style="color: #2a72c4; text-decoration: none;">ICMI 2024 ACM Conference</a></strong>, this workshop explores how interactive technology can enrich dining experiences and foster an interdisciplinary community around commensality and human-food interaction. A special focus is on multimodal interaction among commensal partners — human or artificial.</p>
       <img src="images/ICMIGroup.jpeg" alt="ICMI Group Photo">
     </div>
   </main>
