--- a/results.html
+++ b/results.html
@@ -120,7 +120,7 @@
     <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
     <div class="logo-wrapper">
       <figure>
-        <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+        <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank"><img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png"></a>
       </figure>
     </div>
   </header>
@@ -161,7 +161,9 @@
   </main>
 
   <footer>
-    <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
+    <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
+      <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
+    </a>
     <small>&copy; 2023-2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
   </footer>
 </body>
