--- a/results.html
+++ b/results.html
@@ -120,7 +120,7 @@
     <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
     <div class="logo-wrapper">
       <figure>
-        <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank"><img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png"></a>
+        <a href="https://nexteugeneration.com" target="_blank"><img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png"></a>
       </figure>
     </div>
   </header>
@@ -143,7 +143,7 @@
       <p><strong>Authors:</strong> Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski, Maurizio Mancini</p>
       <p><strong>Conference:</strong> 30th Annual ACM Conference on Intelligent User Interfaces (IUI), March 24-27, 2025, Cagliari, Italy</p>
       <p><a href="https://dl.acm.org/doi/pdf/10.1145/3708557.3716340" target="_blank">Read the paper</a> | <a href="posterIUI.pdf" target="_blank">View Poster (PDF)</a> | <a href="https://www.youtube.com/watch?v=2-CovS9vWfU" target="_blank">Watch Video</a></p>
-      <img src="images/IUIRadek.png" alt="Presentation image from IUI">
+      <img src="images/IUIRadek.png" alt="Presentation image from IUI" style="max-width: 300px;">
     </div>
 
     <div class="pub">
