--- a/results.html
+++ b/results.html
@@ -158,6 +158,40 @@
       <p><strong>Conference:</strong> ICMI Companion 2024, November 4–8, San Jose, Costa Rica</p>
       <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220" target="_blank">Read the paper</a> | <a href="COFI2024_Albana.pdf" target="_blank">View Poster (PDF)</a></p>
     </div>
+  <div class="pub">
+      <h3>Sounding bodies: Exploring sonification to promote physical contact</h3>
+      <p><strong>Authors:</strong> Chiara Gulino, Radoslaw Niewiadomski</p>
+      <p><strong>Conference:</strong> AVI2024, Genova</p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656749" target="_blank">Read the paper</a></p>
+    </div>
+
+    <div class="pub">
+      <h3>Multimodal interactive VR mindfulness experience</h3>
+      <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
+      <p><strong>Conference:</strong> AVI2024, Genova</p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank">Read the paper</a> | <a href="poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
+    </div>
+
+    <div class="pub">
+      <h3>First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024)</h3>
+      <p><strong>Authors:</strong> Niewiadomski, R., Altarriba Bertran, F., Dawes, C., Obrist, M., Mancini, M.</p>
+      <p><strong>Conference:</strong> ICMI '24, November 4–8, 2024, San Jose, Costa Rica</p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3678957.3685762" target="_blank">Read the paper</a></p>
+    </div>
+
+    <div class="pub">
+      <h3>A Virtual Agent as a Commensal Companion</h3>
+      <p><strong>Authors:</strong> Mancini, M., Niewiadomski, R., De Lucia, G., Longobardi, F.M.</p>
+      <p><strong>Conference:</strong> IVA ’24, September 16–19, 2024, Glasgow, United Kingdom</p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3652988.3673963" target="_blank">Read the paper</a> | <a href="poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
+    </div>
+
+    <div class="pub">
+      <h3>How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity</h3>
+      <p><strong>Authors:</strong> Tiuleneva M., Castano E., Niewiadomski, R.</p>
+      <p><strong>Conference:</strong> ACII 2024, September 15–18, Glasgow, UK</p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711" target="_blank">Read the paper</a></p>
+    </div>
   </main>
 
   <footer>
