--- a/results.html
+++ b/results.html
@@ -142,7 +142,7 @@
       <h3>A Social Robot Companion for Individuals Eating Alone</h3>
       <p><strong>Authors:</strong> Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski, Maurizio Mancini</p>
       <p><strong>Conference:</strong> 30th Annual ACM Conference on Intelligent User Interfaces (IUI), March 24-27, 2025, Cagliari, Italy</p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3708557.3716340" target="_blank">Read the paper</a> | <a href="posterIUI.pdf" target="_blank">View Poster (PDF)</a> | <a href="https://www.youtube.com/watch?v=2-CovS9vWfU" target="_blank">Watch Video</a></p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3708557.3716340" target="_blank">Read the paper</a> | <a href="images/posterIUI.pdf" target="_blank">View Poster (PDF)</a> | <a href="https://www.youtube.com/watch?v=2-CovS9vWfU" target="_blank">Watch Video</a></p>
       <img src="images/IUIRadek.png" alt="Presentation image from IUI" style="max-width: 300px;">
     </div>
 
@@ -150,13 +150,13 @@
       <h3>Automatic Recognition of Commensal Activities in Co-located and Online settings</h3>
       <p><strong>Authors:</strong> Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.</p>
       <p><strong>Conference:</strong> ICMI Companion 2024, November 4–8, 2024, San Jose, Costa Rica</p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219" target="_blank">Read the paper</a> | <a href="COFI2024_Kheder.pdf" target="_blank">View Poster (PDF)</a></p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219" target="_blank">Read the paper</a> | <a href="images/COFI2024_Kheder.pdf" target="_blank">View Poster (PDF)</a></p>
     </div>
     <div class="pub">
       <h3>Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings</h3>
       <p><strong>Authors:</strong> Hoxha, A., Fong, H., Niewiadomski, R.</p>
       <p><strong>Conference:</strong> ICMI Companion 2024, November 4–8, San Jose, Costa Rica</p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220" target="_blank">Read the paper</a> | <a href="COFI2024_Albana.pdf" target="_blank">View Poster (PDF)</a></p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220" target="_blank">Read the paper</a> | <a href="images/COFI2024_Albana.pdf" target="_blank">View Poster (PDF)</a></p>
     </div>
   <div class="pub">
       <h3>Sounding bodies: Exploring sonification to promote physical contact</h3>
@@ -169,7 +169,7 @@
       <h3>Multimodal interactive VR mindfulness experience</h3>
       <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
       <p><strong>Conference:</strong> AVI2024, Genova</p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank">Read the paper</a> | <a href="poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank">Read the paper</a> | <a href="images/poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
     </div>
 
     <div class="pub">
