--- a/results.html
+++ b/results.html
@@ -169,7 +169,7 @@
       <h3>Multimodal interactive VR mindfulness experience</h3>
       <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
       <p><strong>Conference:</strong> AVI2024, Genova</p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank">Read the paper</a> | <a href="images/poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank">Read the paper</a></p>
     </div>
 
     <div class="pub">
@@ -183,7 +183,7 @@
       <h3>A Virtual Agent as a Commensal Companion</h3>
       <p><strong>Authors:</strong> Mancini, M., Niewiadomski, R., De Lucia, G., Longobardi, F.M.</p>
       <p><strong>Conference:</strong> IVA ’24, September 16–19, 2024, Glasgow, United Kingdom</p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3652988.3673963" target="_blank">Read the paper</a> | <a href="poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
+      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3652988.3673963" target="_blank">Read the paper</a> | <a href="images/poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
     </div>
 
     <div class="pub">
